# sr-firmware

./: .gitmodules  AGENTS.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  Makefile  PROTOCOL.md  README.md  VERSIONING_IMPLEMENTATION.md
.github/: CODEOWNERS  audit-log-reconcile-staging.yml  codex-reply.yml  codex-review.yml  issue-milestone-audit-log.yml  pull_request_template.md
.github/codex/: review.md
.github/workflows/: audit-log-reconcile-staging.yml  automated-releases.yml  codex-reply.yml  codex-review.yml  issue-milestone-audit-log.yml  pr-build-check.yml
audit/: LAST_100.md  README.md
docker/: Dockerfile
docs/: codex-review-policy.md
docs/milestones/: Milestone1_HostSideTestHarness.md  Milestone2_TinyFrame.md  Milestone3_LengthPrefixCRC.md  Milestone4_CDCWriteOptimization.md
include/: TF_Config.h  crc.h  max77958.h  rp2040_log.h  serial_comm_manager.h  version.h
src/: crc.c  max77958.c  robot.c  rp2040_log.c  serial_comm_manager.c
tools/benchmark/: BENCHMARK_TEST_RESULTS.md  CMakeLists.txt  README.md  main.cpp
